fixtures/RH003/negative/before/TaskQueue.hs
module TaskQueue where

-- | Returns True if the task count is above the busy threshold.
busy :: Int -> Bool
busy n = n > 10
